set consultant and add quesions

--- a/ConsultationApp/ConsultationApp/ConsultationApp.csproj
+++ b/ConsultationApp/ConsultationApp/ConsultationApp.csproj
@@ -25,6 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="ConsultantsListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="ConsultationPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
